--- a/01-Javascript/Materi/10 Node Package Manager/package.json
+++ b/01-Javascript/Materi/10 Node Package Manager/package.json
@@ -3,15 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "lodash": "^4.17.21"
-  },
-  "devDependencies": {
-    "jest": "^29.5.0"
-  }
+  "license": "ISC"
 }
